# chipi8-rs

./: Cargo.toml  README.md
emulator-core/: Cargo.toml
emulator-core/src/: lib.rs  resources.rs
emulator-core/src/chip8_vm/: display.rs  keyboard.rs  mod.rs  stack.rs  timers.rs  vm.rs
emulator-ui/: Cargo.toml
emulator-ui/src/: app.rs  audio.rs  main.rs  utils.rs
